// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - private - LN - nota - cuerpo - <Html /> renders snapshot  - iframe with pym inside html block 1`] = `
<div>
  <div
    class="com-embed --html"
  >
    <div
      class="test"
    >
      <h3
        class="title"
      >
        iframe dentro de un div
      </h3>
      <div
        class="contenido-externo"
      >
        <div
          class="com-anexo pym"
          id="anexo-AHYEKXSUEQIUXZD-0-3"
        >
          <iframe
            frameborder="0"
            marginheight="0"
            scrolling="no"
            src="https://especialess3.lanacion.com.ar/tableau/tableau.html?id=coronavirus_tests_argentina_porcentajes&altoTV=460&altoD=460&altoM=410&initialWidth=0&childId=anexo-AHYEKXSUEQIUXZD-0-3&parentTitle=&parentUrl=http%3A%2F%2Flocalhost%2F"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - cuerpo - <Html /> renders snapshot - HTML 1`] = `
<div>
  <div
    class="com-embed --html container-center-100"
    id="anexo-AHYEKXSUEQIUXZD"
  >
    <div
      class="empty"
      style="padding: 20px;background-color:#333;color:white;text-align:center;font-size:2em;"
    >
      sample html block
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - cuerpo - <Html /> renders snapshot - iframe with "pym" 1`] = `
<div>
  <div
    class="com-embed --html"
  >
    <div
      class="contenido-externo"
    >
      <div
        class="com-anexo pym"
        id="anexo-AHYEKXSUEQIUXZD-0"
      >
        <iframe
          frameborder="0"
          marginheight="0"
          scrolling="no"
          src="https://especialess3.lanacion.com.ar/20/03/coronavirus-argentina/?initialWidth=0&childId=anexo-AHYEKXSUEQIUXZD-0&parentTitle=&parentUrl=http%3A%2F%2Flocalhost%2F#/barras"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - cuerpo - <Html /> renders snapshot - iframe without "pym" 1`] = `
<div>
  <div
    class="com-embed --html container-center-100"
    id="anexo-AHYEKXSUEQIUXZD"
  >
    <iframe
      frameborder="0"
      height="800"
      scrolling="no"
      src="https://especialess3.lanacion.com.ar/20/03/coronavirus-argentina/#/barras"
      width="100%"
    >
       
    </iframe>
  </div>
</div>
`;
